fixed spacing on detail cards

--- a/src/components/DatePlanDetail/DatePlanDetail.scss
+++ b/src/components/DatePlanDetail/DatePlanDetail.scss
@@ -32,7 +32,7 @@
   background-color: $text-1;
   width: 90%;
   height: auto;
-  padding: 1rem;
+  padding: 2rem;
   margin: 1rem 0;
   font-size: 1.5rem;
   color: $text-2;
